# bioimg_rs

./: .gitignore  Cargo.toml  README.md  notes.txt  rustfmt.toml
.github/workflows/: build.yml  release.yml
bioimg_codegen/: Cargo.toml
bioimg_codegen/src/: lib.rs  modelrecord.rs  restore.rs  str_marker.rs
bioimg_codegen/src/syn_extensions/: mod.rs
bioimg_gui/: Cargo.toml  README.md
bioimg_gui/src/: app.rs  lib.rs  main.rs  prefil.rs  project_data.rs  request.rs  result.rs  task.rs
bioimg_gui/src/widgets/: age_widget.rs  attachments_widget.rs  author_widget.rs  axis_physical_scale_widget.rs  axis_physical_size_widget.rs  axis_size_widget.rs  axis_widget.rs  binarize_widget.rs  button_ext.rs  channel_name_widget.rs  cite_widget.rs  clip_widget.rs  code_editor_widget.rs  collapsible_widget.rs  conda_env_editor_widget.rs  conda_env_widget.rs  cover_image_widget.rs  enum_widget.rs  error_display.rs  example_tensor_widget.rs  fancy_string_widget.rs  file_source_widget.rs  file_widget.rs  fixed_zero_mean_unit_variance_widget.rs  from_widget.rs  functional.rs  gui_npy_array.rs  icon_widget.rs  iconify.rs  image_widget.rs  image_widget_2.rs  inout_tensor_widget.rs  input_axis_widget.rs  input_tensor_widget.rs  json_editor_widget.rs  labels.rs  license_Widget.rs  maintainer_widget.rs  mod.rs  model_interface_widget.rs  (+33 more)
bioimg_runtime/: Cargo.toml
bioimg_runtime/src/: axis_size_resolver.rs  conda_env.rs  cover_image.rs  file_reference.rs  file_source.rs  fs.rs  icon.rs  lib.rs  model_interface.rs  model_record.rs  model_weights.rs  npy_array.rs  package_component.rs  rdf_attachment.rs  zip_archive_ext.rs  zip_writer_ext.rs  zoo_model.rs
bioimg_runtime/src/model/: mod.rs  model_interface.rs
bioimg_spec/: Cargo.toml  README.md  pyproject.toml
bioimg_spec/src/: lib.rs
bioimg_spec/src/rdf/: author.rs  badge.rs  basic_chars_string.rs  bounded_string.rs  cite_entry.rs  clamped.rs  constrained.rs  cover_image_source.rs  file_description.rs  file_reference.rs  icon.rs  identifier.rs  license.rs  lowercase.rs  maintainer.rs  mod.rs  non_empty_list.rs  orcid.rs  si_units.rs  slashless_string.rs  tag.rs  version.rs
bioimg_spec/src/rdf/literal/: mod.rs
bioimg_spec/src/rdf/model/: axes.rs  axes2.rs  axis_size.rs  channel_name.rs  data_type.rs  dataset_descr.rs  input_tensor.rs  mod.rs  model_rdf_0_5.rs  output_tensor.rs  preprocessing.rs  run_mode.rs  space_unit.rs  tensor_data_descr.rs  tensor_id.rs  time_unit.rs  weights.rs
bioimg_spec/src/rdf/model/axes/: input_axes.rs  mod.rs  output_axes.rs
bioimg_spec/src/rdf/model/legacy/: mod.rs
bioimg_spec/src/rdf/model/postprocessing/: mod.rs
bioimg_spec/src/rdf/model/preprocessing/: binarize.rs  clip.rs  ensure_dtype.rs  mod.rs  scale_linear.rs  scale_range.rs  sigmoid.rs  zero_mean_unit_variance.rs
bioimg_spec/src/rdf/model/unsupported/: mod.rs
bioimg_spec/src/runtime/: channel_names.rs  cover_image.rs  icon.rs  mod.rs  npy_array.rs
bioimg_spec/src/runtime/model/: axes2.rs  axis_size_resolver.rs  input_tensor.rs  mod.rs  model_interface.rs
bioimg_spec/src/util/: mod.rs
bioimg_zoo/: Cargo.toml  README.md
bioimg_zoo/src/: auth.rs  client.rs  collection.rs  hypha.rs  lib.rs
bioimg_zoo/tests/: test_model_upload.rs
biospec_app/: Cargo.toml
biospec_app/src/: lib.rs  main.rs
biospec_app/src/spec/: mod.rs
spec/src/rdf/: attachment.rs  author.rs  cite_entry.rs  file_reference.rs  maintainer.rs  pegged_string.rs  resource_description.rs  version.rs
spec/src/rdf/model/: data_range.rs  data_type.rs  preprocessing.rs  size.rs
spec/src/util/: mod.rs
src/: lib.rs
src/rdf/: author.rs  badge.rs  cite_entry.rs  file_reference.rs  format_version.rs  identifier.rs  input_tensor.rs  license.rs  lowercase.rs  mod.rs  non_empty_list.rs  version.rs
src/rdf/literal/: mod.rs
src/rdf/model/: axes.rs  axes2.rs  channel_name.rs  data_type.rs  input_tensor.rs  mod.rs  preprocessing.rs  shape.rs  tensor_data_descr.rs  time_unit.rs
src/util/: mod.rs
