[package]
name = "bioimg_model_spec"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "bioimg_model_spec"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
url = { version = "2.4.1", features = ["serde"] }
pyo3 = "0.19.0"
