[workspace]
members = ["bioimg_codegen", "bioimg_gui", "bioimg_spec", "bioimg_runtime", "bioimg_zoo"]
resolver = "2"

[workspace.dependencies]
image = {version = "0.24.8", features = ["png"]}
iso8601-timestamp = "0.2.17"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
zip = {version = "2.1"}


# FIXME: this is from the egui example app
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
#[profile.dev.package."*"]
#opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
