[package]
name = "bioimg_gui"
version = "0.1.8"
authors = ["Tomaz Vieira<tom.fogaca@gmail.com>"]
edition = "2021"
rust-version="1.79"

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
bioimg_spec = {path = "../bioimg_spec"}
bioimg_runtime = {path = "../bioimg_runtime"}

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.50"
rfd = "0.12.1"
parking_lot = "0.12.1"
image = "0.24.8"
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
url = { version = "2.5.0", features = ["serde"] }
strum = "0.26.1"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
paste = "1.0.14"
poll-promise = "0.3.0"
serde_json = "1.0.116"
zip = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
bioimg_codegen = { path = "../bioimg_codegen" }
postcard = { version = "1.0.8", features = ["alloc", "use-std"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
