[package]
name = "bioimg_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
bioimg_spec = {path = "../bioimg_spec"}
bioimg_runtime = {path = "../bioimg_runtime"}

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.50"
rfd = "0.12.1"
parking_lot = "0.12.1"
image = "0.24.8"
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
url = { version = "2.5.0", features = ["serde"] }
strum = "0.26.1"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
paste = "1.0.14"
poll-promise = "0.3.0"
serde_json = "1.0.116"
zip = { workspace = true, default-features = true }
uuid = { version = "1.8.0", features = ["v4"] }
bioimg_codegen = { path = "../bioimg_codegen" }
bson = "2.11.0"
indoc = "2.0.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
zip = {workspace = true, default-features = false, features=[
  "aes-crypto",
  # "bzip2",
  "deflate",
  "deflate64",
  "lzma",
  "time",
  "xz",
  "zstd",
]}
