[package]
name = "bioimg_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
egui = "0.30.0"
eframe = { version = "0.30.0" }
log = "0.4"
bioimg_spec = {path = "../bioimg_spec"}
bioimg_runtime = {path = "../bioimg_runtime"}
bioimg_zoo = {path = "../bioimg_zoo"}

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.50"
rfd = { version = "0.15.1" }
parking_lot = "0.12.1"
image = "0.24.8"
egui_extras = { version = "0.30.0", features = ["all_loaders", "syntect"] }
url = { version = "2.5.0", features = ["serde"] }
strum = "0.26.1"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
paste = "1.0.14"
poll-promise = "0.3.0"
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4"] }
bioimg_codegen = { path = "../bioimg_codegen" }
bson = "2.11.0"
http = { workspace = true }
indoc = "2.0.5"
tempfile = "3.14.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.10.1", features = ["http-crate"] }
zip = { workspace = true, default-features = true }
rattler_conda_types = "0.28.3"
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
zip = {workspace = true, default-features = false, features=[
  # "aes-crypto",
  # "bzip2",
  "deflate",
  # "deflate64",
  # "lzma",
  # "time",
  # "xz",
  # "zstd",
]}
