[package]
name = "bioimg_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
paste = "1.0.14"
thiserror = "1.0.57"
bioimg_spec = { path = "../bioimg_spec" }
image.workspace = true
zip = { workspace = true }
serde_json = "1.0.114"
serde = "1.0.197"
uuid = { version = "1.7.0", features = ["v4"] }
iso8601-timestamp = { workspace = true }
serde_yaml = "0.9.32"
ureq = "2.9.7"

