[package]
name = "bioimg_runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
paste = "1.0.14"
thiserror = "1.0.57"
bioimg_spec = { path = "../bioimg_spec" }
image.workspace = true
serde_json = "1.0.114"
serde = "1.0.197"
uuid = { version = "1.7.0", features = ["v4"] }
iso8601-timestamp = { workspace = true }
serde_yaml = { workspace = true }
tempfile = "3.14.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zip = { workspace = true, default-features = true }
ureq = "2.9.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
zip = {workspace = true, default-features = false, features=["deflate"]}
web-sys = { version = "0.3.72", features = ["Request", "Response", "RequestInit", "Window"] }
wasm-bindgen-futures = "0.4.45"
wasm-bindgen = "0.2.95"
