[package]
name = "bioimg_spec"
version = "0.1.0"
edition = "2021"

[lib]
name = "bioimg_spec"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { workspace = true }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.26.1", features = ["strum_macros", "derive"] }
thiserror = "1.0.50"
url = { version = "2.4.1", features = ["serde"] }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
paste = "1.0.14"
uuid = { version = "1.7.0", features = ["v4"] }
iso8601-timestamp = { workspace = true }
serde_yaml = "0.9.32"
