[package]
name = "bioimg_spec"
version = "0.1.0"
edition = "2021"
rust-version="1.79"

[lib]
name = "bioimg_spec"
crate-type = ["rlib"]

[dependencies]
image = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["strum_macros", "derive"] }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
paste = "1.0.14"
iso8601-timestamp = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["v4", "js"] }
iso8601-timestamp = { workspace = true, features = ["js"]}


