[package]
name = "bioimg_spec"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "bioimg_spec"
crate-type = ["rlib"]

[dependencies]
image = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["strum_macros", "derive"] }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
paste = "1.0.14"
iso8601-timestamp = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["v4", "js"] }
iso8601-timestamp = { workspace = true, features = ["js"]}


