[package]
name = "bioimg_zoo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bioimg_spec = {  path = "../bioimg_spec" }
ehttp = "0.5.0"
serde = { workspace = true }
serde_json = { workspace = true } 
thiserror = { workspace = true }
